--- a/source/form.html
+++ b/source/form.html
@@ -8,7 +8,7 @@
     <div class="wrapper">
     <header class="page-header">
       <a class="page-header__logo" href="#"><img class="page-header--logo-image"src="logo" height="" width="" alt="Логотип"></a>
-      <nav "page-header__nav"><button class="page-header__menu--button"></button></nav>
+      <nav class="page-header__nav"><button class="page-header__menu--button"></button></nav>
     </header>
     <main>
       <form class="form" action="https://echo.htmlacademy.ru" method="post">
