--- a/source/index.html
+++ b/source/index.html
@@ -8,7 +8,7 @@
     <div class="wrapper">
     <header class="page-header">
       <a class="page-header__logo" href="#"><img class="page-header--logo-image"src="logo" height="" width="" alt="Логотип"></a>
-      <nav "page-header__nav"><button class="page-header__menu--button"></button></nav>
+      <nav class="page-header__nav"><button class="page-header__menu--button"></button></nav>
     </header>
     <main>
       <h1 class="visually-hidden">Мишка - интернет-магазин предметов ручной работы для дома</h1>
