--- a/source/catalog.html
+++ b/source/catalog.html
@@ -7,14 +7,14 @@
   <body>
     <div class="wrapper">
     <header class="page-header">
-      <a class="page-header__logo" href="#"><img class="page-header--logo-image"src="logo" height="" width="" alt="Логотип"></a>
+      <a class="page-header__logo" href="#"><img class="page-header--logo-image" src="logo" height="50" width="50" alt="Логотип"></a>
       <nav class="page-header__nav"><button class="page-header__menu--button"></button></nav>
     </header>
     <main>
       <section class="catalog">
       <div class="catalog__heading-wrapper"><h1 class="catalog__heading-text main-heading">Каталог товаров</h1></div>
       <article class="catalog__item item-card">
-        <img class="item-card__img" src="hair" height="" width="" alt="Зайчик-попрыгайчик">
+        <img class="item-card__img" src="hair" height="50" width="50" alt="Зайчик-попрыгайчик">
         <h2 class="item-card__heading">Зайчик-попрыгайчик</h2>
         <span class="item-card__desc">Рост 30 см, вес 200 г</span>
         <div class="item-card__buy buy-options">
@@ -23,7 +23,7 @@
         </div>
       </article>
       <article class="catalog__item item-card">
-        <img class="item-card__img" src="laundry basket" height="" width="" alt="Корзинка для белья">
+        <img class="item-card__img" src="laundrybasket" height="50" width="50" alt="Корзинка для белья">
         <h2 class="item-card__heading">Корзинка для белья</h2>
         <span class="item-card__desc">Диаметр 15 см, высота 10 см</span>
         <div class="item-card__buy buy-options">
@@ -32,7 +32,7 @@
         </div>
       </article>
       <article class="catalog__item item-card">
-        <img class="item-card__img" src="toy basket" height="" width="" alt="Большая корзинка для игрушек">
+        <img class="item-card__img" src="toybasket" height="50" width="50" alt="Большая корзинка для игрушек">
         <h2 class="item-card__heading">Большая корзинка для игрушек</h2>
         <span class="item-card__desc">Диаметр 30 см, высота 30 см</span>
         <div class="item-card__buy buy-options">
@@ -45,9 +45,9 @@
       <div class="process__heading-wrapper">
         <h2 class="process__heading-text">Процесс производства</h2>
       </div>
-      <video class="process__video" width="" height="" src="#"></video>
+      <video class="process__video" width="50" height="50" src="#"></video>
       <button class="process__video--button"></button>
-      <span clas="process__description">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</span>
+      <span class="process__description">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</span>
       <a href="#" class="process__button--buy button">Сделать заказ</a>
     </section>
      </main>
