--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,7 @@
   <body>
     <div class="wrapper">
     <header class="page-header">
-      <a class="page-header__logo" href="#"><img class="page-header--logo-image"src="logo" height="" width="" alt="Логотип"></a>
+      <a class="page-header__logo" href="#"><img class="page-header--logo-image" src="logo" height="50" width="50" alt="Логотип"></a>
       <nav class="page-header__nav"><button class="page-header__menu--button"></button></nav>
     </header>
     <main>
@@ -35,7 +35,7 @@
             <td class="parameters-table__value">15 см</td>
           </tr>
         </table>
-        <img class="promo-item__img" src="knitted-baskets" height="" width="" alt="Вязаные корзинки">
+        <img class="promo-item__img" src="knitted-baskets" height="50" width="50" alt="Вязаные корзинки">
         <div class="promo-item__price-wrapper"><span class="promo-item__price-text">Цена: 990 руб.</span></div>
         <a class="promo-item__button--buy button" href="#">Заказать</a>
       </section>
@@ -53,7 +53,7 @@
       <section class="reviews">
         <h2 class="reviews__heading">Отзывы</h2>
         <article class="reviews__post rewiew-text">
-          <span class="rewiew-text__main">Я молодая мама, но все равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</span></div>
+          <span class="rewiew-text__main">Я молодая мама, но все равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</span>
           <b class="rewiew-text__author">Анастасия Красильникова</b>
           <span class="rewiew-text__insta">&#64;misssssiskras</span>
         </article>
