--- a/source/form.html
+++ b/source/form.html
@@ -7,7 +7,7 @@
   <body>
     <div class="wrapper">
     <header class="page-header">
-      <a class="page-header__logo" href="#"><img class="page-header--logo-image"src="logo" height="" width="" alt="Логотип"></a>
+      <a class="page-header__logo" href="#"><img class="page-header--logo-image" src="logo" height="50" width="50" alt="Логотип"></a>
       <nav class="page-header__nav"><button class="page-header__menu--button"></button></nav>
     </header>
     <main>
