--- a/source/index.html
+++ b/source/index.html
@@ -1,12 +1,98 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Мишка</title>
-  </head>
-  <body>
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">Профессиональный HTML и CSS</a>», уровень 2.</p>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Мишка</title>
+</head>
 
-  </body>
+<body>
+  <div class="wrapper">
+    <header class="page-header">
+      <a class="page-header__logo" href="#"><img class="page-header--logo-image" src="logo" height="50" width="50" alt="Логотип"></a>
+      <nav class="page-header__nav"><button class="page-header__menu--button"></button></nav>
+    </header>
+    <main>
+      <h1 class="visually-hidden">Мишка - интернет-магазин предметов ручной работы для дома</h1>
+      <section class="features">
+        <div class="features__heading-wrapper">
+          <h2 class="features__heading-text main-heading">Милые штуки ручной работы для дома</h2>
+        </div>
+        <div class="features__section features__section--home"><a class="features__section--link" href="#">Предметы интерьера</a></div>
+        <div class="features__section features__section--toys"><a class="features__section--link" href="#">Игрушки</a></div>
+      </section>
+      <section class="promo-item">
+        <h2 class="promo-item__heading">Вязаные корзинки</h2>
+        <span class="promo__ad">Товар недели</span>
+        <span class="promo-item__desc">Экологически чистая пряжа, ручная работа. Доступна в шести расцветках, и трех размерах.</span>
+        <table class="promo-item__parameters parameters-table">
+          <tr>
+            <td class="parameters-table__value">Цвет:</td>
+            <td class="parameters-table__value">"Тиффани"/серый</td>
+          </tr>
+          <tr>
+            <td class="parameters-table__value">Диаметр:</td>
+            <td class="parameters-table__value">25 см</td>
+          </tr>
+          <tr>
+            <td class="parameters-table__value">Высота:</td>
+            <td class="parameters-table__value">15 см</td>
+          </tr>
+        </table>
+        <img class="promo-item__img" src="knitted-baskets" height="50" width="50" alt="Вязаные корзинки">
+        <div class="promo-item__price-wrapper"><span class="promo-item__price-text">Цена: 990 руб.</span></div>
+        <a class="promo-item__button--buy button" href="#">Заказать</a>
+      </section>
+      <section class="short-info">
+        <h2 class="short-info__heading">Коротко о нас</h2>
+        <ul class="short-info__list">
+          <li class="short-info__item short-info__item--eco">Экологически чистые материалы</li>
+          <li class="short-info__item short-info__item--style">Скандинавский стиль по российкой цене</li>
+          <li class="short-info__item short-info__item--like">Увеличивает лайки на фотографиях</li>
+          <li class="short-info__item short-info__item--love">Связано вручную с любовью и умилением</li>
+          <li class="short-info__item short-info__item--rus">Поддержка отечественного производителя</li>
+          <li class="short-info__item short-info__item--gift">Поставляется в подарочной упаковке</li>
+        </ul>
+      </section>
+      <section class="reviews">
+        <h2 class="reviews__heading">Отзывы</h2>
+        <article class="reviews__post rewiew-text">
+          <span class="rewiew-text__main">Я молодая мама, но все равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более
+            стильными, а также набирают больше лайков!</span>
+          <b class="rewiew-text__author">Анастасия Красильникова</b>
+          <span class="rewiew-text__insta">&#64;misssssiskras</span>
+        </article>
+        <div class="reviews__controls">
+          <a class="reviews__skip reviews__skip--left" href="#"></a>
+          <a class="reviews__skip reviews__skip--right" href="#"></a>
+        </div>
+        <a class="reviews__button--write button" href="#">Написать</a>
+      </section>
+      <section class="contacts">
+        <h2 class="contacts__heading">Контакты</h2>
+        <table class="contacts__table contacts-info">
+          <tr>
+            <td class="contacts-info__text">email:</td>
+            <td class="contacts-info__text">info&#64;mimimishkashop.ru</td>
+          </tr>
+          <tr>
+            <td class="contacts-info__text">адрес:</td>
+            <td class="contacts-info__text">г.Санкт-Петербург, ул.Большая Конюшенная, д.19/8, офис 101</td>
+          </tr>
+        </table>
+        <div class="contacts__map"><iframe></iframe></div>
+        <a href="#" class="contacts__button--write button">Напишите нам</a>
+      </section>
+    </main>
+    <footer class="footer">
+      <ul class="footer__social social-btns">
+        <li><a class="social-btns__btn social-btns__btn--insta" href="#"></a></li>
+        <li><a class="social-btns__btn social-btns__btn--fb" href="#"></a></li>
+        <li><a class="social-btns__btn social-btns__btn--tw" href="#"></a></li>
+      </ul>
+      <span class="footer__copyright">Разработано<a class="footer__copyright--logo" href="#"></a></span>
+    </footer>
+  </div>
+</body>
+
 </html>
