--- a/source/index.html
+++ b/source/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Мишка</title>
-  </head>
-  <body>
-    <div class="wrapper">
+
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Мишка</title>
+</head>
+
+<body>
+  <div class="wrapper">
     <header class="page-header">
       <a class="page-header__logo" href="#"><img class="page-header--logo-image" src="logo" height="50" width="50" alt="Логотип"></a>
       <nav class="page-header__nav"><button class="page-header__menu--button"></button></nav>
@@ -13,9 +15,11 @@
     <main>
       <h1 class="visually-hidden">Мишка - интернет-магазин предметов ручной работы для дома</h1>
       <section class="features">
-      <div class="features__heading-wrapper"><h2 class="features__heading-text main-heading">Милые штуки ручной работы для дома</h2></div>
-      <div class="features__section features__section--home"><a class="features__section--link" href="#">Предметы интерьера</a></div>
-      <div class="features__section features__section--toys"><a class="features__section--link" href="#">Игрушки</a></div>
+        <div class="features__heading-wrapper">
+          <h2 class="features__heading-text main-heading">Милые штуки ручной работы для дома</h2>
+        </div>
+        <div class="features__section features__section--home"><a class="features__section--link" href="#">Предметы интерьера</a></div>
+        <div class="features__section features__section--toys"><a class="features__section--link" href="#">Игрушки</a></div>
       </section>
       <section class="promo-item">
         <h2 class="promo-item__heading">Вязаные корзинки</h2>
@@ -53,32 +57,33 @@
       <section class="reviews">
         <h2 class="reviews__heading">Отзывы</h2>
         <article class="reviews__post rewiew-text">
-          <span class="rewiew-text__main">Я молодая мама, но все равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</span>
+          <span class="rewiew-text__main">Я молодая мама, но все равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более
+            стильными, а также набирают больше лайков!</span>
           <b class="rewiew-text__author">Анастасия Красильникова</b>
           <span class="rewiew-text__insta">&#64;misssssiskras</span>
         </article>
         <div class="reviews__controls">
-        <a class="reviews__skip reviews__skip--left" href="#"></a>
-        <a class="reviews__skip reviews__skip--right" href="#"></a>
+          <a class="reviews__skip reviews__skip--left" href="#"></a>
+          <a class="reviews__skip reviews__skip--right" href="#"></a>
         </div>
         <a class="reviews__button--write button" href="#">Написать</a>
       </section>
       <section class="contacts">
         <h2 class="contacts__heading">Контакты</h2>
         <table class="contacts__table contacts-info">
-        <tr>
-          <td class="contacts-info__text">email:</td>
-          <td class="contacts-info__text">info&#64;mimimishkashop.ru</td>
-        </tr>
-        <tr>
-          <td class="contacts-info__text">адрес:</td>
-          <td class="contacts-info__text">г.Санкт-Петербург, ул.Большая Конюшенная, д.19/8, офис 101</td>
-        </tr>
-      </table>
+          <tr>
+            <td class="contacts-info__text">email:</td>
+            <td class="contacts-info__text">info&#64;mimimishkashop.ru</td>
+          </tr>
+          <tr>
+            <td class="contacts-info__text">адрес:</td>
+            <td class="contacts-info__text">г.Санкт-Петербург, ул.Большая Конюшенная, д.19/8, офис 101</td>
+          </tr>
+        </table>
         <div class="contacts__map"><iframe></iframe></div>
         <a href="#" class="contacts__button--write button">Напишите нам</a>
       </section>
-     </main>
+    </main>
     <footer class="footer">
       <ul class="footer__social social-btns">
         <li><a class="social-btns__btn social-btns__btn--insta" href="#"></a></li>
@@ -88,5 +93,6 @@
       <span class="footer__copyright">Разработано<a class="footer__copyright--logo" href="#"></a></span>
     </footer>
   </div>
-  </body>
+</body>
+
 </html>
