--- a/source/catalog.html
+++ b/source/catalog.html
@@ -1,17 +1,11 @@
 <!DOCTYPE html>
 <html lang="ru">
-<<<<<<< HEAD
-
-=======
->>>>>>> b480e1ba3141da5160e16f96c77130b529da1561
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML Academy: Мишка</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
-<<<<<<< HEAD
-
-=======
->>>>>>> b480e1ba3141da5160e16f96c77130b529da1561
 <body>
   <div class="wrapper">
     <header class="page-header">
@@ -71,9 +65,4 @@
     </footer>
   </div>
 </body>
-<<<<<<< HEAD
-
 </html>
-=======
-</html>
->>>>>>> b480e1ba3141da5160e16f96c77130b529da1561
