--- a/source/form.html
+++ b/source/form.html
@@ -1,33 +1,22 @@
 <!DOCTYPE html>
 <html lang="ru">
-<<<<<<< HEAD
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Мишка</title>
-  </head>
-  <body>
-    <div class="wrapper">
-=======
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML Academy: Мишка</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <div class="wrapper">
->>>>>>> b480e1ba3141da5160e16f96c77130b529da1561
     <header class="page-header">
       <a class="page-header__logo" href="#"><img class="page-header--logo-image" src="logo" height="50" width="50" alt="Логотип"></a>
       <nav class="page-header__nav"><button class="page-header__menu--button"></button></nav>
     </header>
     <main>
       <form class="form" action="https://echo.htmlacademy.ru" method="post">
-<<<<<<< HEAD
-        <div class="form__heading-wrapper"><h1 class="form__heading-text main-heading">Вязание на заказ</h1></div>
-=======
         <div class="form__heading-wrapper">
           <h1 class="form__heading-text main-heading">Вязание на заказ</h1>
         </div>
->>>>>>> b480e1ba3141da5160e16f96c77130b529da1561
         <span class="form__description"></span>
         <fieldset class="form__section form__section--type">
           <legend class="form__section--title">Тип:</legend>
@@ -39,24 +28,18 @@
           <input type="checkbox" name="color-white" id="color-white" class="visually-hidden" checked><label for="color-white">Белый</label>
           <input type="checkbox" name="color-grey" id="color-grey" class="visually-hidden" checked><label for="color-grey">Серый</label>
           <input type="checkbox" name="color-tiffani" id="color-tiffani" class="visually-hidden"><label for="color-tiffani">"Тиффани"</label>
-<<<<<<< HEAD
-         <input type="checkbox" name="color-black" id="color-black" class="visually-hidden"><label for="color-black">Черный</label>
-         <input type="checkbox" name="color-pink" id="color-pink" class="visually-hidden"><label for="color-pink">Розовый</label>
-        <input type="checkbox" name="color-orange" id="color-orange" class="visually-hidden"><label for="color-orange">Оранжевый</label>
-=======
           <input type="checkbox" name="color-black" id="color-black" class="visually-hidden"><label for="color-black">Черный</label>
           <input type="checkbox" name="color-pink" id="color-pink" class="visually-hidden"><label for="color-pink">Розовый</label>
           <input type="checkbox" name="color-orange" id="color-orange" class="visually-hidden"><label for="color-orange">Оранжевый</label>
->>>>>>> b480e1ba3141da5160e16f96c77130b529da1561
         </fieldset>
         <fieldset class="form__section form__section--name">
-          <legend class="form__section--title">ФИО</legend>
+          <legend class="form__section--title">фио</legend>
           <label for="first-name">Имя:</label><input type="text" name="first-name" id="first-name" placeholder="Введите ваше имя &#8432;" required>
           <label for="last-name">Фамилия:</label><input type="text" name="last-name" id="last-name" placeholder="Укажите фамилию &#8432;" required>
           <label for="father-name">Отчество:</label><input type="text" name="father-name" id="father-name" placeholder="Отчество, если желаете">
         </fieldset>
         <fieldset class="formt__section form__section--phone">
-          <legend class="form__section--title">ТЕЛ</legend>
+          <legend class="form__section--title">тел</legend>
           <input type="tel" name="phone" id="phone" placeholder="+7 XXX XXX XX XX &#8432;" required>
         </fieldset>
         <fieldset class="form__section form__section--email">
@@ -80,9 +63,5 @@
       <span class="footer__copyright">Разработано<a class="footer__copyright--logo" href="#"></a></span>
     </footer>
   </div>
-<<<<<<< HEAD
-  </body>
-=======
 </body>
->>>>>>> b480e1ba3141da5160e16f96c77130b529da1561
 </html>
