--- a/source/index.html
+++ b/source/index.html
@@ -65,12 +65,13 @@
                 </tr>
             </table>
             <picture>
-                    <source media="(min-width:1250px)" srcset="img/triple-set-desktop@1x.jpg 1x,
+                <source media="(min-width:1250px)" srcset="img/triple-set-desktop@1x.jpg 1x,
                     img/triple-set-desktop@2x.jpg 2x">
-                    <source media="(min-width:768px)" srcset="img/triple-set-tablet@1x.jpg 1x,
+                <source media="(min-width:768px)" srcset="img/triple-set-tablet@1x.jpg 1x,
                     img/triple-set-tablet@2x.jpg 2x">
-                    <img class="promo-item__img" src="img/triple-set-mobile@1x.jpg" srcset="img/triple-set-mobile@2x.jpg 2x" alt="Вязаные корзинки">
-                </picture>
+                <img class="promo-item__img" src="img/triple-set-mobile@1x.jpg" srcset="img/triple-set-mobile@2x.jpg 2x"
+                    alt="Вязаные корзинки">
+            </picture>
             <span class="promo-item__price">Цена: 990 руб.</span>
             <a class="promo-item__buy button" href="#">Заказать</a>
         </section>
@@ -178,10 +179,9 @@
                     <td class="contacts-info">г.Санкт-Петербург, ул.Большая Конюшенная, д.19/8, офис 101</td>
                 </tr>
             </table>
-            <div class="contacts__map"></div>
+            <div class="contacts__map"><iframe src="https://yandex.ru/map-widget/v1/-/CBBwfUWRSB" allowfullscreen="true"></iframe></div>
             <a href="#" class="contacts__write button">Напишите нам</a>
         </section>
-
     </main>
     <footer class="footer">
         <a class="page-footer__logo" href="#"><span class="visually-hidden">Логотип</span>
@@ -231,7 +231,8 @@
                         </g>
                     </svg></a></li>
         </ul>
-        <a class="footer__copyright" href="https://up.htmlacademy.ru/adaptive/15">Разработано <span class="visually-hidden">Логотип HtmlAcademy</span>
+        <a class="footer__copyright" href="https://up.htmlacademy.ru/adaptive/15">Разработано <span class="visually-hidden">Логотип
+                HtmlAcademy</span>
             <svg class="footer__copyright--logo" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="26.943px" height="34.09px" viewBox="0 0 26.943 34.09"
                 enable-background="new 0 0 26.943 34.09" xml:space="preserve">
