--- a/source/catalog.html
+++ b/source/catalog.html
@@ -276,4 +276,5 @@
       <button class="popup__buy button">Добавить</button>
     </div>
   </section>
-  <script src=js/form.js> </script> </body> </html>
+  <script src=js/form.js> </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/picturefill/3.0.3/pict.."></script> </body> </html>
