--- a/source/form.html
+++ b/source/form.html
@@ -217,4 +217,5 @@
       </svg>
     </a>
   </footer>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/picturefill/3.0.3/pict.."></script>
   <script src=js/form.js> </script> </body> </html>
