--- a/source/index.html
+++ b/source/index.html
@@ -253,27 +253,27 @@
   </main>
   <footer class="footer">
     <a class="page-footer__logo" href="#"><span class="visually-hidden">Логотип</span>
-      <svg width="102" height="34">
+      <svg class="footer-icons" width="102" height="34">
         <use xlink:href="#icon-logo-footer"></use>
       </svg>
     </a>
     <ul class="footer__social">
       <li class="footer__social--insta"><a href="#"><span class="visually-hidden">Страница в Instagram</span>
-          <svg width="22" height="22">
+          <svg class="footer-icons" width="22" height="22">
             <use xlink:href="#icon-insta"></use>
           </svg></a></li>
       <li class="footer__social--fb"><a href="#"><span class="visually-hidden">Страница в Facebook</span>
-          <svg width="15" height="28">
+          <svg class="footer-icons" width="15" height="28">
             <use xlink:href="#icon-fb"></use>
           </svg></a></li>
       <li class="footer__social--tw"><a href="#"><span class="visually-hidden">Страница в Twitter</span>
-          <svg width="24" height="20">
+          <svg class="footer-icons" width="24" height="20">
             <use xlink:href="#icon-twitter"></use>
           </svg></a></li>
     </ul>
     <a class="footer__copyright" href="https://up.htmlacademy.ru/adaptive/15">Разработано <span class="visually-hidden">Логотип
         HtmlAcademy</span>
-      <svg class="footer__copyright--logo" width="27" height="34">
+      <svg class="footer__copyright--logo footer-icons" width="27" height="34">
         <use xlink:href="#icon-logo-htmlacademy"></use>
       </svg>
     </a>
@@ -290,4 +290,4 @@
       <button class="popup__buy button">Добавить</button>
     </div>
   </section>
-  <script src=js/form.js> </script> </body> </html>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/picturefill/3.0.3/pict.."></script><script src=js/form.js> </script> </body> </html>
